WIP checkin. NOwehre land

--- a/shard.yml
+++ b/shard.yml
@@ -3,19 +3,23 @@ version: 0.1.0
 authors:
     - Rishav Sharan <rishav.sharan@gmail.com>
     
-targets:
-    kemapi:
-        main: src/kemapi.cr
+
+dependencies:
+    kemal:
+        github: kemalcr/kemal
     pg:
         github: will/crystal-pg
     faker:
         github: askn/faker
     dotenv:
         github: gdotdesign/cr-dotenv
+    sentry-run:
+        github: faustinoaq/sentry-run
+        
+targets:
+    kemapi:
+        main: src/kemapi.cr
 
-dependencies:
-    kemal:
-        github: kemalcr/kemal
 
 crystal: 0.24.2
 license: MIT
