WIP. removing crappi

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://wguyczml:NUmD9Jb8UcwN0lMCvyue7G2MhsD6-z8x@fizzy-cherry.db.elephantsql.com:5432/wguyczml
+DATABASE_URL=postgres://adndltsc:6gnbAbCFSu7fCL5Rlaj7DNudnlNdr4zz@stampy.db.elephantsql.com:5432/adndltsc
