--- a/shard.yml
+++ b/shard.yml
@@ -9,6 +9,8 @@ dependencies:
         github: kemalcr/kemal
     pg:
         github: will/crystal-pg
+    granite:
+        github: amberframework/granite
     faker:
         github: askn/faker
     dotenv:
