--- a/shard.yml
+++ b/shard.yml
@@ -7,21 +7,22 @@ authors:
 dependencies:
     kemal:
         github: kemalcr/kemal
+        branch: master
     pg:
         github: will/crystal-pg
     granite:
         github: amberframework/granite
-    faker:
-        github: askn/faker
     dotenv:
         github: gdotdesign/cr-dotenv
-    sentry-run:
-        github: faustinoaq/sentry-run
-        
+
+development_dependencies:
+    faker:
+        github: askn/faker
+
 targets:
     kemapi:
         main: src/kemapi.cr
 
 
-crystal: 0.24.2
+crystal: 0.25.0
 license: MIT
