--- a/shard.yml
+++ b/shard.yml
@@ -7,6 +7,7 @@ authors:
 dependencies:
     kemal:
         github: kemalcr/kemal
+        branch: master
     pg:
         github: will/crystal-pg
     granite:
